<resources>
    <string name="app_name">Aptitude</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formula__home__page">Formula_Home_Page</string>
    <string name="title_activity_example__home__page">Example_Home_Page</string>
    <string name="title_activity_practice__home__page">Practice_Home_Page</string>
    <string name="title_activity_test__home__page">Test_Home_Page</string>
    <string name="title_activity_bottom__navigation">Bottom_Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="formula_title">சூத்திரம் (Formula)</string>
    <string name="number_title">எண்கள் (Number)</string>
    <string name="lcmhcf_title"></string>
    <string name="number_type_content">\t\t\t\t1) இயல் எண்கள் (Natural number):- 1,2,3,4,5........ \n\t\t\t\t2) முழு எண்கள் (Whole number):- 0,1,2,3,4,5........</string>
    <string name="number_evennumber_content">\t\t\t\t2-ஆல்  மீதியின்றி வகுப்படும் எண்கள்.</string>
    <string name="easy_divideby2_2content">\t\t\t\t12,836 கடைசி இலக்கம் 6 ஆகையால் இது இரண்டால் வகுப்படும் .1003 இரண்டால் வகுப்படாது .</string>
    <string name="easy_divideby3_2content">\t\t\t\t695424 -> 6+9+5+4+2+4=30 ஆக இதன் அனைத்து இலக்கங்களின் கூடுதல் 3-ஆல் வகுப்படும் 30/3=10.</string>
    <string name="easy_divideby4_2content">\t\t\t\t6879380, இதில் கடைசி இரண்டு இலக்கங்கள் 80 ஆகும். 80/4=20 ஆக 6879380 என்ற எண் 4-ஆல் வகுப்படும்.</string>
    <string name="easy_divideby5_2content">\t\t\t\t1,07,550,1539665 ஆகியவை முடிவில் 0,5 கொண்டுள்ளன ஆக இது 5 ஆல் வகுப்படும் .17 , 24, 31 இவை 5 ஆல் வகுப்படாது.</string>
    <string name="easy_divideby8_2content">\t\t\t\t16789360 இதன் கடைசி மூன்று இலக்கங்கள் அதாவது 360 (360/8=45) 8-ஆல் வகுப்படும் ,ஆக 16789360 8-ஆல் வகுப்படும்.</string>
    <string name="easy_divideby9_2content">\t\t\t\t12834 -> 1+2+8+3+4=18 இங்கு 18 ஒன்பதால் வகுப்படும் ஆக 12834 9 ஆல் வகுப்படும்.</string>
    <string name="easy_divideby10_2content">\t\t\t\t126930 இது 10-ஆல் வகுப்படும் . 16934 இது 10-ஆல் வகுப்படாது.</string>
    <string name="easy_divideby11_2content">\t\t\t\t29435428</string>
    <string name="factor_lcmhcf_factors">\t\t\t\t9/3 இங்கு 9 மீதியின்றி 3-ஆல் வகுப்படும். ஆக  9-ன் வகுத்தி 3 ஆகும்.[ 9 / 3 =3, மீதி =0].</string>
    <string name="factor_lcmhcf_multiples">\t\t\t\t3-ன் ஒரு மடங்கு 3x1=3, 3-ன் இரு மடங்கு 3x2=6, 3-ன் மூன்று மடங்கு 3x3=9................</string>
    <string name="lcmhcf_hcf_2content">\t\t\t\t12, 24, 48 இந்த எண்களை  பொதுவாக வகுக்கும் எண்கள் -> 2,3,4,6,12. இவற்றில் 12 மிக பெரியது ஆக இது  மீ.பொ.வ ஆகும்.</string>
    <string name="lcmhcf_lcm_2content">\t\t\t\t12, 24, 48 இந்த எண்கள் அனைத்தாலும் வகுப்படக்கூடிய எண்கள் 48,96,144, இவற்றில் மிக சிறியது 48 ஆக இது மீ .சி.ம ஆகும்.</string>
    <string name="lcmhcf_factionlcmhcf_2content">\t\t\t\t4.8 , 1.2 இவற்றின் தசம மதிப்பை சமன் செய்ய 10-ஆல் இரண்டையும் பெருகினால் 48,12 என கிடைக்கும், தற்போது இதன் தசம மதிப்பு சமன் செய்யப்பட்டது.</string>
    <string name="lcmhcf_comparefraction_2content">\t\t\t\t4/3,6/9 இங்கு மீ .சி .ம=9 ஆக 4x3/3x3, 6x1/9x1---->12/9 , 6/9 தற்போது இவ்விரண்டு பின்னங்களை ஒப்பிடுவது எளிது .</string>
    <string name="decimalfraction_decimalfraction_1content">\t\t\t\t10-இன் அடுக்குகளை பகுதிகளாகக் கொண்ட பின்னங்கள் ‘தசம பின்னங்கள்’ எனப்படும்.\n\n\t\t\t\t1 / 10  என்பது 10ல் ஒரு மடங்கு இதனை 0.1 எனவும் குறிப்பிடலாம்.\n\n\t\t\t\t37 /100  என்பது 100ல் 37 மடங்கு இதனை 0.37 எனவும் குறிப்பிடலாம்.
    </string>
    <string name="simplification_rules">(a + b) (a - b) = (a² - b²)\n\n(a + b)² =  a² + b² + 2ab\n\n(a - b)² =  a² + b² - 2ab\n\n(a³ + b³) = (a + b) (a² + b² - ab)\n\n(a³ - b³) = (a - b) (a² + b² + ab)\n\n(a + b + c)² = a² + b² + c² + 2(ab + bc +ca )\n\n(a³ + b³ + c³ - 3abc)=(a + b + c)(a² + b² + c² - ab - bc -ac)</string>
    <string name="simpleinterest">\t\t\tதனிவட்டி (Simple interest)=S.I\n\n\t\t\tஅசல் (Principal)= P\n\n\t\t\tஆண்டு (Year)= N\n\n\t\t\tவட்டிவிகிதம்(Rate) = R
</string>
    <string name="title_activity_result__page">Result_Page</string>
    <string name="privacy_policy">Rajesh built the Tamil Aptitude app as an Ad Supported app. This SERVICE is provided by Rajesh at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Tamil Aptitude unless otherwise defined in this Privacy Policy.</string>
<string name="privacy_policy_c2">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

\n\nThe app does use third party services that may collect information used to identify you.

\n\nLink to privacy policy of third party service providers used by the app

</string>
<string name="privacy_policy_c3">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
<string name="privacy_policy_c4">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

T\n\nhis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
<string name="privacy_policy_c5">I may employ third-party companies and individuals due to the following reasons:

\n\n\tTo facilitate our Service;
\n\t*To provide the Service on our behalf;
\n\t*To perform Service-related services; or
\n\t*To assist us in analyzing how our Service is used.
\n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>

<string name="privacy_policy_c6">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
<string name="privacy_policy_c7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
<string name="privacy_policy_c8">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
<string name="privacy_policy_c9">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
<string name="privacy_policy_c10">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at weekenddevelopers01@gmail.com.</string>
</resources>
